Adicionando imagem e vídeo, alterando arquivo ExemploImagens, adicionando arquivo ExemploVideo