@@ -1,18 +1,46 @@
-## Getting Started
+# ☕ Exercícios de JavaFX
 
-Welcome to the VS Code Java world. Here is a guideline to help you get started to write Java code in Visual Studio Code.
+![Java](https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=openjdk&logoColor=white)
+![JavaFX](https://img.shields.io/badge/JavaFX-FF0000?style=for-the-badge&logo=java&logoColor=white)
 
-## Folder Structure
+Este repositório foi criado para consolidar e organizar meus estudos em **JavaFX**. Aqui você encontrará uma coleção de exercícios práticos cobrindo desde os conceitos mais básicos de interface gráfica até a manipulação de layouts complexos e componentes de mídia.
 
-The workspace contains two folders by default, where:
+---
 
-- `src`: the folder to maintain sources
-- `lib`: the folder to maintain dependencies
+## 🚀 Conceitos e Tópicos Praticados
 
-Meanwhile, the compiled output files will be generated in the `bin` folder by default.
+O repositório está dividido em exemplos práticos que abrangem os seguintes pilares do JavaFX:
 
-> If you want to customize the folder structure, open `.vscode/settings.json` and update the related settings there.
+### 🏛️ Ciclo de Vida e Estrutura Básica
+* **Application & Launch:** Entendimento do ciclo de vida de uma aplicação JavaFX e o método de inicialização.
+* **Stage & Scene:** Manipulação do "palco" (janela principal) e da "cena" (conteúdo visual).
+* **Start:** Implementação do método abstrato principal para renderização de telas.
 
-## Dependency Management
+### 🎨 Componentes e Layouts
+* **Controls:** Uso de componentes interativos como `Button`, `TextField`, `Label`, `CheckBox`, entre outros.
+* **Layouts:** Organização visual utilizando contêineres como `VBox`, `HBox`, `GridPane`, `BorderPane`, etc.
+* **Listas:** Implementação e manipulação de `ListView` e `TableView` para exibição de dados estruturados.
 
-The `JAVA PROJECTS` view allows you to manage your dependencies. More details can be found [here](https://github.com/microsoft/vscode-java-dependency#manage-dependencies).
+### 🎬 Mídia e Elementos Visuais
+* **Imagens:** Renderização de arquivos estáticos com `ImageView`.
+* **Vídeos:** Reprodução de arquivos de mídia utilizando `Media` e `MediaPlayer`.
+
+---
+
+## 🛠️ Pré-requisitos e Tecnologias
+
+Para rodar os projetos deste repositório, você precisará de:
+
+* **JDK 17** ou superior.
+* **JavaFX SDK** (configurado na sua IDE ou via gerenciador de dependências).
+* Uma IDE de sua preferência (IntelliJ IDEA, Eclipse ou VS Code).
+
+> 💡 **Dica:** Caso utilize o IntelliJ, lembre-se de adicionar os módulos do JavaFX nas configurações de execução (`--add-modules javafx.controls,javafx.media`).
+
+---
+
+## 📁 Como Executar o Projeto
+
+1. Clone este repositório em sua máquina local:
+   ```bash
+   git clone [https://github.com/SEU-USUARIO/SEU-REPOSITORIO.git](https://github.com/SEU-USUARIO/SEU-REPOSITORIO.git)
